 - Added Context.attributes property as a way to share objects between all Restlets
   of an application. Automatically includes the parent application if any.
 - Added Filter.setNext() method taking a Resource class as parameter and automatically
   creating an associated Finder instance.
 - Added TransformRepresentation by refactoring private logic from Transformer.
 
[Enhancements] 
 - The content negotiation algorithm is now more flexible about languages. It will try
   to satisfy the client languages preferences, but will always return a representation
   if the media type is accepted, even if the language is not explicitely accepted. 
 - Upgraded Jetty to 6.1.1.
 - Added a dual licensing for GPL (with a Classpath exception) in addition to CDDL.
 - The ServerServlet now allows easier customization of the creation of Application
   instances. Based on a patch from Valdis Rigdon.
 - Updated Spring framework to 2.0.2
 - Added support for Maven POM generation. The distribution now contains a "lib/poms" directory.
   Suggested by Turadg Aleahmad, Lars Heuer, Mike Moran, Mitchell Stewart and Vincent Lari.
 
1.0 RC2 (2007-01-09)
[Bugs fixed]
 - Fixed minor bug with the URI parsing (query sign "?" inside fragment). 
   Contributed by Thierry Boileau.
 - Fixed bug in the dynamic invocation of custom handle*() methods in the Handler class.
 - Fixed bug with the directory listing generation in the method "getVariants" of class DirectoryResource. 
   Contributed by Sean Landis.

[API changes]
 - Added an XmlRepresentation, super class of DomRepresentation and SaxRepresentation
   that faciliates the evaluation of XPath expressions and manages a context namespaces.
 - Added Message.getEntityAsSax() and getEntityAsDom() methods.
 - Added org.restlet.util.NodeSet that facilitates the iteration over a DOM NodeList.
 - Split Representation class into a new Variant class (containing all metadata 
   properties) and into a lighter Representation class. Variant is a subclass of 