@@ -1,9 +1,9 @@
 <html>
 <head>
 <link rel="alternate" type="application/rss+xml" title="Noelios blog"
-	href="http://blog.noelios.com/feed">
+   href="http://blog.noelios.com/feed">
 <link rel="meta" title="DOAP" type="application/rdf+xml"
-	href="http://www.restlet.org/doap" />
+   href="http://www.restlet.org/doap" />
 <style type="text/css">
 /* <![CDATA[ */
 @import "http://www.restlet.org/stylesheets/tigris.css";
@@ -14,7 +14,7 @@
 <body>
 
 <a target="_top" href="http://www.restlet.org"><img
-	src="http://www.restlet.org/images/logo200" /></a>
+   src="http://www.restlet.org/images/logo200" /></a>
 <br />
 <br />
 
@@ -22,143 +22,143 @@
 
 <h3>Features</h3>
 <ul>
-	<li>REST concepts have equivalent Java classes (resource,
-	representation, connector, etc.)</li>
-	<li>Suitable for both client and server Web applications</li>
-	<li>Automatic server-side content negotiation based on media type
-	and language preferences</li>
-	<li>Static file serving and editing with metadata association
-	based on file extensions</li>
-	<li>Support for representations like JSON, XML (DOM or SAX),
-	FreeMarker and Velocity templates (alternative to JSP)</li>
-	<li>Server connectors for HTTP, HTTPS and <a target="_top"
-		href="http://tomcat.apache.org/connectors-doc/">AJP</a> (for Apache or
-	IIS) protocols</li>
-	<li>Client connectors for HTTP, HTTPS, SMTP, JDBC and FILE
-	protocols</li>
-	<li>Routers support the concept of <a target="_top"
-		href="http://www.useit.com/alertbox/990321.html">URIs as UI</a> with
-	advanced pattern matching features</li>
-	<li>Filters support features such as authorization, browser
-	tunneling and extraction of call attributes</li>
-	<li>Support of HTTP Basic and Amazon Web Services authentication
-	schemes</li>
-	<li>Deployment as native services using <a target="_top"
-		href="http://wrapper.tanukisoftware.org">Java Service Wrapper</a></li>
-	<li>Supports blocking and non-blocking NIO modes</li>
-	<li>Standalone Restlet API as an alternative to Servlet API
-	(adapter Servlet also available)</li>
-	<li>Noelios Restlet Engine (NRE) is the Reference Implementation
-	(provided by <a target="_top" href="http://www.noelios.com">Noelios
-	Consulting</a>)</li>
+   <li>REST concepts have equivalent Java classes (resource,
+   representation, connector, etc.)</li>
+   <li>Suitable for both client and server Web applications</li>
+   <li>Automatic server-side content negotiation based on media type
+   and language preferences</li>
+   <li>Static file serving and editing with metadata association
+   based on file extensions</li>
+   <li>Support for representations like JSON, XML (DOM or SAX),
+   FreeMarker and Velocity templates (alternative to JSP)</li>
+   <li>Server connectors for HTTP, HTTPS and <a target="_top"
+      href="http://tomcat.apache.org/connectors-doc/">AJP</a> (for Apache or
+   IIS) protocols</li>
+   <li>Client connectors for HTTP, HTTPS, SMTP, JDBC and FILE
+   protocols</li>
+   <li>Routers support the concept of <a target="_top"
+      href="http://www.useit.com/alertbox/990321.html">URIs as UI</a> with
+   advanced pattern matching features</li>
+   <li>Filters support features such as authorization, browser
+   tunneling and extraction of call attributes</li>
+   <li>Support of HTTP Basic and Amazon Web Services authentication
+   schemes</li>
+   <li>Deployment as native services using <a target="_top"
+      href="http://wrapper.tanukisoftware.org">Java Service Wrapper</a></li>
+   <li>Supports blocking and non-blocking NIO modes</li>
+   <li>Standalone Restlet API as an alternative to Servlet API
+   (adapter Servlet also available)</li>
+   <li>Noelios Restlet Engine (NRE) is the Reference Implementation
+   (provided by <a target="_top" href="http://www.noelios.com">Noelios
+   Consulting</a>)</li>
 </ul>
 
 <h3>Download the <b>@version-full@</b> release</h3>
 <ul>
-	<li><a target="_top"
-		href="http://www.restlet.org/downloads/restlet-@version-compact@.exe">Windows
-	installer</a></li>
-	<li><a target="_top"
-		href="http://www.restlet.org/downloads/restlet-@version-compact@.zip">Zip
-	archive</a></li>
-	<li><a target="_top" href="http://www.restlet.org/docs/changes">Changes
-	log</a></li>
+   <li><a target="_top"
+      href="http://www.restlet.org/downloads/restlet-@version-compact@.exe">Windows
+   installer</a></li>
+   <li><a target="_top"
+      href="http://www.restlet.org/downloads/restlet-@version-compact@.zip">Zip
+   archive</a></li>
+   <li><a target="_top" href="http://www.restlet.org/docs/changes">Changes
+   log</a></li>
 </ul>
 
 <h3>Documentation</h3>
 <ul>
-	<li><a target="_top" href="http://www.restlet.org/introduction">Introduction</a>
-	(<a target="_top" href="http://www.restlet.org/introduction.pdf">PDF</a>)</li>
-	<li><a target="_top" href="http://www.restlet.org/tutorial">Tutorial</a>
-	(<a target="_top" href="http://www.restlet.org/tutorial.pdf">PDF</a>)</li>
-	<li><a target="_top" href="http://search.restlet.org">REST
-	search engine</a></li>
-	<li><a target="_top" href="http://www.restlet.org/docs/api/">Restlet
-	API</a> javadocs</li>
-	<li><a target="_top" href="http://www.restlet.org/docs/ext/">Restlet
-	Extensions</a> javadocs</li>
-	<li><a target="_top" href="http://www.restlet.org/docs/nre/">Noelios
-	Restlet Engine</a> javadocs</li>
-	<li><a target="_top" href="http://www.restlet.org/faq">Frequently
-	Asked Questions</a></li>
-	<li><a target="_top" href="http://www.restlet.org/example/self">Example
-	application</a></li>
-	<li><a target="_top" href="http://www.restlet.org/glossary">Glossary</a></li>
-	<li><a target="_top" href="http://wiki.restlet.org">Wiki</a></li>
+   <li><a target="_top" href="http://www.restlet.org/introduction">Introduction</a>
+   (<a target="_top" href="http://www.restlet.org/introduction.pdf">PDF</a>)</li>
+   <li><a target="_top" href="http://www.restlet.org/tutorial">Tutorial</a>
+   (<a target="_top" href="http://www.restlet.org/tutorial.pdf">PDF</a>)</li>
+   <li><a target="_top" href="http://search.restlet.org">REST
+   search engine</a></li>
+   <li><a target="_top" href="http://www.restlet.org/docs/api/">Restlet
+   API</a> javadocs</li>
+   <li><a target="_top" href="http://www.restlet.org/docs/ext/">Restlet
+   Extensions</a> javadocs</li>
+   <li><a target="_top" href="http://www.restlet.org/docs/nre/">Noelios
+   Restlet Engine</a> javadocs</li>
+   <li><a target="_top" href="http://www.restlet.org/faq">Frequently
+   Asked Questions</a></li>
+   <li><a target="_top" href="http://www.restlet.org/examples/self">Example
+   application</a></li>
+   <li><a target="_top" href="http://www.restlet.org/glossary">Glossary</a></li>
+   <li><a target="_top" href="http://wiki.restlet.org">Wiki</a></li>
 </ul>
 
 <h3>Development</h3>
 <ul>
-	<li><a target="_top" href="http://www.restlet.org/discuss">Discuss</a>
-	with users and developers</li>
-	<li><a target="_top" href="http://www.restlet.org/roadmap">Road
-	map</a> with goals and timeline</li>
-	<li><a target="_top"
-		href="http://www.restlet.net/servlets/ProjectIssues">Report issues</a>
-	(bugs, enhancements)</li>
-	<li><a target="_top" href="http://www.restlet.net">Development
-	site</a> (provided by <a target="_top"
-		href="http://www.collab.net/products/community_edition.html">CollabNet</a>)</li>
-	<li><a target="_top" href="http://www.restlet.net/fisheye/">FishEye
-	service</a> (provided by <a target="_top"
-		href="http://www.cenqua.com/fisheye/">Cenqua</a>)</li>
-	<li><a target="_top" href="http://www.noelios.com">Professional
-	services</a> (consulting, advanced support and training)</li>
+   <li><a target="_top" href="http://www.restlet.org/discuss">Discuss</a>
+   with users and developers</li>
+   <li><a target="_top" href="http://www.restlet.org/roadmap">Road
+   map</a> with goals and timeline</li>
+   <li><a target="_top"
+      href="http://www.restlet.net/servlets/ProjectIssues">Report issues</a>
+   (bugs, enhancements)</li>
+   <li><a target="_top" href="http://www.restlet.net">Development
+   site</a> (provided by <a target="_top"
+      href="http://www.collab.net/products/community_edition.html">CollabNet</a>)</li>
+   <li><a target="_top" href="http://www.restlet.net/fisheye/">FishEye
+   service</a> (provided by <a target="_top"
+      href="http://www.cenqua.com/fisheye/">Cenqua</a>)</li>
+   <li><a target="_top" href="http://www.noelios.com">Professional
+   services</a> (consulting, advanced support and training)</li>
 </ul>
 
 <h3>Dependencies</h3>
 <ul>
-	<li>For all applications: <a target="_top"
-		href="http://java.sun.com/j2se/1.5.0/">Java SE 5.0</a> or above. Older
-	versions also supported using <a
-		href="http://retroweaver.sourceforge.net">Retroweaver</a>.</li>
-	<li>For standalone HTTP servers: <a target="_top"
-		href="http://asyncweb.safehaus.org">AsyncWeb 0.8</a>, <a target="_top"
-		href="http://jetty.mortbay.org">Jetty 6.1</a> and <a target="_top"
-		href="http://www.simpleframework.org">Simple 3.1</a></li>
-	<li>For embedded HTTP servers: Servlet 2.4 containers like <a
-		target="_top" href="http://tomcat.apache.org/">Apache Tomcat</a></li>
-	<li>For dynamic documents: <a target="_top"
-		href="http://www.json.org/">JSON 2.0</a>, <a target="_top"
-		href="http://www.freemarker.org/">FreeMarker 2.3</a>, <a target="_top"
-		href="http://jakarta.apache.org/velocity/">Velocity 1.4</a> and XML
-	(via SAX or DOM)</li>
-	<li>For uploading large files: <a target="_top"
-		href="http://jakarta.apache.org/commons/fileupload/">Apache
-	FileUpload 1.1</a></li>
-	<li>For sending email: <a target="_top"
-		href="http://java.sun.com/products/javamail/">JavaMail 1.4</a></li>
+   <li>For all applications: <a target="_top"
+      href="http://java.sun.com/j2se/1.5.0/">Java SE 5.0</a> or above. Older
+   versions also supported using <a
+      href="http://retroweaver.sourceforge.net">Retroweaver</a>.</li>
+   <li>For standalone HTTP servers: <a target="_top"
+      href="http://asyncweb.safehaus.org">AsyncWeb 0.8</a>, <a target="_top"
+      href="http://jetty.mortbay.org">Jetty 6.1</a> and <a target="_top"
+      href="http://www.simpleframework.org">Simple 3.1</a></li>
+   <li>For embedded HTTP servers: Servlet 2.4 containers like <a
+      target="_top" href="http://tomcat.apache.org/">Apache Tomcat</a></li>
+   <li>For dynamic documents: <a target="_top"
+      href="http://www.json.org/">JSON 2.0</a>, <a target="_top"
+      href="http://www.freemarker.org/">FreeMarker 2.3</a>, <a target="_top"
+      href="http://jakarta.apache.org/velocity/">Velocity 1.4</a> and XML
+   (via SAX or DOM)</li>
+   <li>For uploading large files: <a target="_top"
+      href="http://jakarta.apache.org/commons/fileupload/">Apache
+   FileUpload 1.1</a></li>
+   <li>For sending email: <a target="_top"
+      href="http://java.sun.com/products/javamail/">JavaMail 1.4</a></li>
 </ul>
 
 <h3>Licensing</h3>
 <ul>
-	<li>Software distributed under either the <a target="_top"
-		href="http://www.opensource.org/licenses/cddl1.php">CDDL license</a>
-	or the <a target="_top"
-		href="http://www.opensource.org/licenses/gpl-license.php">GPL
-	license</a> with a <a target="_top"
-		href="http://www.gnu.org/software/classpath/license.html">Classpath
-	exception</a>.</li>
-	<li>Special software licenses or trademark usage can also be <a
-		href="mailto:contact@noelios.com?subject=Licensing">discussed</a>.</li>
+   <li>Software distributed under either the <a target="_top"
+      href="http://www.opensource.org/licenses/cddl1.php">CDDL license</a>
+   or the <a target="_top"
+      href="http://www.opensource.org/licenses/gpl-license.php">GPL
+   license</a> with a <a target="_top"
+      href="http://www.gnu.org/software/classpath/license.html">Classpath
+   exception</a>.</li>
+   <li>Special software licenses or trademark usage can also be <a
+      href="mailto:contact@noelios.com?subject=Licensing">discussed</a>.</li>
 </ul>
 
 <br />
 
 <small>
 <table>
-	<tr>
-		<td style="vertical-align: middle;" rowspan="2"><a target="_top"
-			href="http://www.java.net/"><img
-			src="http://www.restlet.org/images/javanet.gif" alt="java.net member" /></a></td>
-		<td>Last modified on @release-date@</td>
-	</tr>
-	<tr>
-		<td>Copyright &copy; 2005-2007 <a
-			href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>.
-		Restlet is a registered trademark of <a target="_top"
-			href="http://www.noelios.com">Noelios Consulting</a>.</td>
-	</tr>
+   <tr>
+      <td style="vertical-align: middle;" rowspan="2"><a target="_top"
+         href="http://www.java.net/"><img
+         src="http://www.restlet.org/images/javanet.gif" alt="java.net member" /></a></td>
+      <td>Last modified on @release-date@</td>
+   </tr>
+   <tr>
+      <td>Copyright &copy; 2005-2007 <a
+         href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>.
+      Restlet is a registered trademark of <a target="_top"
+         href="http://www.noelios.com">Noelios Consulting</a>.</td>
+   </tr>
 </table>
 </small>
 </body>
