@@ -15,11 +15,18 @@
 
 <br />
 
-<h1>Examples covered in the "REST Web Services" book, to be published by O'Reilly</h1>
+<h1>Examples from the "REST Web Services" book</h1>
+
+<p>
+   <a href="http://www.crummy.com/writing/REST-Web-Services/">This book</a> is the first one dedicated to REST. It is authored by <a href="http://www.crummy.com/">Leonard Richardson</a> and <a href="http://www.intertwingly.net/blog/">Sam Ruby</a> and published by O'Reilly.
+</p>
+<p>
+   For now, please find the <a href="http://restlet.tigris.org/source/browse/restlet/trunk/module/org.restlet.example/src/org/restlet/example/book/rest/"> source code</a> of all the book examples reimplemented using Restlets.
+</p>
 
 <br />
 
-<small> Last modified on 2007-01-09. Copyright &copy; 2005-2007
+<small> Last modified on 2007-01-17. Copyright &copy; 2005-2007
 <a href="mailto:contact@noelios.com">J&eacute;r&ocirc;me Louvel</a>.
 Restlet is a registered trademark of <a target="_top"
    href="http://www.noelios.com">Noelios Consulting</a>. </small>
